Fixed overflow-y to auto to better show page

--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -8,7 +8,7 @@ body {
     padding-top: 5rem;
     flex-direction: column;
     font-family: 'quicksand';
-    overflow-y: hidden;
+    overflow-y: auto;
 }
 
 form {
@@ -46,7 +46,6 @@ form {
 
 .content {
     display: flex;
-    height: 100%;
     z-index: 1;
     background-color: white;
 }
